feat: add /health-check
